--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div class="col-md-10">
         <div id="table-area" class="">
-          <table id="summary" class="table table-striped">
+          <table>
             <thead>
               <tr>
                 <th class="table-head">Gender</th>
@@ -46,7 +46,7 @@
   </div>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <!-- APP.JS HERE FOR JSON DATA FOR CHARTS -->
+  <script src="app.js"></script>
 </body>
 
 </html>
