cleaned and connected each current html, added ML html

--- a/templates_original/index.html
+++ b/templates_original/index.html
@@ -1,52 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Test Scores</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Test Scores</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 jumbotron text-center">
+          <h1>Student Test Scores</h1>
+          <p>Write info here</p>
+        </div>
+        <div class="text-center">
+          <h2><strong>Project Summary</strong></h2>
+          <p>Write description of project here</p>
+        </div>
+        <!-- INSERT TABLEAU DIV HERE -->
+        <div
+          class="tableauPlaceholder"
+          id="viz1614368819719"
+          style="position: relative"
+        >
+          <noscript
+            ><a href="#"
+              ><img
+                alt=" "
+                src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FinalProjectStudentPerformances&#47;Dashboard1&#47;1_rss.png"
+                style="border: none" /></a></noscript
+          ><object class="tableauViz" style="display: none">
+            <param
+              name="host_url"
+              value="https%3A%2F%2Fpublic.tableau.com%2F"
+            />
+            <param name="embed_code_version" value="3" />
+            <param name="site_root" value="" />
+            <param
+              name="name"
+              value="FinalProjectStudentPerformances&#47;Dashboard1"
+            />
+            <param name="tabs" value="no" />
+            <param name="toolbar" value="yes" />
+            <param
+              name="static_image"
+              value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FinalProjectStudentPerformances&#47;Dashboard1&#47;1.png"
+            />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="en" />
+          </object>
+        </div>
 
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Student Test Scores</h1>
-        <p>Write info here</p>
-      </div>
-      <div class="text-center">
-        <h2><strong>Project Summary</strong></h2>
-        <p>Write description of project here</p>
-      </div>
-      <!-- INSERT TABLEAU DIV HERE -->
-
-      <div class="col-md-10">
-        <div id="table-area" class="">
-          <table>
-            <thead>
-              <tr>
-                <th class="table-head">Gender</th>
-                <th class="table-head">Ethnicity</th>
-                <th class="table-head">Parental Education</th>
-                <th class="table-head">Lunch Type</th>
-                <th class="table-head">Test Preperation</th>
-                <th class="table-head">Math Score</th>
-                <th class="table-head">Reading Score</th>
-                <th class="table-head">Writing Score</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
+        
+        <script type="text/javascript">
+          var divElement = document.getElementById("viz1614368819719");
+          var vizElement = divElement.getElementsByTagName("object")[0];
+          if (divElement.offsetWidth > 800) {
+            vizElement.style.minWidth = "420px";
+            vizElement.style.maxWidth = "1650px";
+            vizElement.style.width = "100%";
+            vizElement.style.minHeight = "587px";
+            vizElement.style.maxHeight = "987px";
+            vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
+          } else if (divElement.offsetWidth > 500) {
+            vizElement.style.minWidth = "420px";
+            vizElement.style.maxWidth = "1650px";
+            vizElement.style.width = "100%";
+            vizElement.style.minHeight = "587px";
+            vizElement.style.maxHeight = "987px";
+            vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
+          } else {
+            vizElement.style.width = "100%";
+            vizElement.style.height = "1477px";
+          }
+          var scriptElement = document.createElement("script");
+          scriptElement.src =
+            "https://public.tableau.com/javascripts/api/viz_v1.js";
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
+        <div class="col-md-10">
+          <div id="table-area" class="">
+            <table>
+              <thead>
+                <tr>
+                  <th class="table-head">Gender</th>
+                  <th class="table-head">Ethnicity</th>
+                  <th class="table-head">Parental Education</th>
+                  <th class="table-head">Lunch Type</th>
+                  <th class="table-head">Test Preperation</th>
+                  <th class="table-head">Math Score</th>
+                  <th class="table-head">Reading Score</th>
+                  <th class="table-head">Writing Score</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
         </div>
       </div>
-
     </div>
-  </div>
-  <script src="https://d3js.org/d3.v6.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="./static/app.js"></script>
-</body>
-
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+    <script src="./static/app.js"></script>
+  </body>
 </html>
